# Dall-E-project

./: .replit  main.py  pyproject.toml
static/: style.css
templates/: base.html  generateImage.html  index.html  signup.html
